--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -6,7 +6,7 @@ on fs
     chown system drmrpc /dev/qseecom
     chmod 0664 /dev/ion
     chown system system /dev/ion
-    #install_keyring
+    install_keyring
 
 on fs
     start hwservicemanager
@@ -18,53 +18,52 @@ on fs
     chown system system /dev/ion
 
 # Separate copy needed to use /sbin/linker64 instead of /system/bin/linker64
-service sbinqseecomd /system/bin/qseecomd
+service sbinqseecomd /sbin/qseecomd
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service hwservicemanager /system/bin/hwservicemanager
+service hwservicemanager /sbin/hwservicemanager
     user root
     group root readproc
     disabled
     onrestart setprop hwservicemanager.ready false
     seclabel u:r:recovery:s0
 
-service servicemanager /system/bin/servicemanager
+service servicemanager /sbin/servicemanager
     user root
     group root readproc
     disabled
     seclabel u:r:recovery:s0
 
-service keystore_auth /system/bin/keystore_auth
+service keystore_auth /sbin/keystore_auth
     oneshot
     user system
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keystore2 /system/bin/keystore2 /tmp/misc/keystore
+service keystore /sbin/keystore /tmp/misc/keystore
     user root
     group root drmrpc readproc
     disabled
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service-qti
+service gatekeeper-1-0 /sbin/android.hardware.gatekeeper@1.0-service-qti
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-3-0 /system/bin/android.hardware.keymaster@3.0-service-qti
+service keymaster-3-0 /sbin/android.hardware.keymaster@3.0-service-qti
     user root
     group root drmrpc
     disabled
     seclabel u:r:recovery:s0
 
-####
-#on property:ro.crypto.state=encrypted
-#    start sbinqseecomd
+on boot
+    setprop sys.usb.config adb,mtp
 
 on property:hwservicemanager.ready=true
     start sbinqseecomd
@@ -104,11 +103,6 @@ on property:ro.crypto.fs_crypto_blkdev=*
     stop gatekeeper-1-0
     stop servicemanager
     stop hwservicemanager
-
-#on early-init
-#    start fingerprintid
-    # Enable double-tap to wake
-    #write /sys/devices/virtual/touch/tp_dev/gesture_on 1
 
 # read ro.build.fingerprint from system, setprop it. for ota
 service fingerprintid /init.fingerprintid.sh
