--- a/recovery/root/init.recovery.service.rc
+++ b/recovery/root/init.recovery.service.rc
@@ -1,5 +1,5 @@
 on boot
 
 # For starting recovery on 5.0 and newer
-service recovery /system/bin/recovery
+service recovery /sbin/recovery
     seclabel u:r:recovery:s0
