--- a/recovery/root/init.recovery.hlthchrg.rc
+++ b/recovery/root/init.recovery.hlthchrg.rc
@@ -1,5 +1,5 @@
 # charger for Android 8.0 and up
 
-service charger /sbin/charger -r
+service charger /system/bin/charger -r
     critical
     seclabel u:r:charger:s0
