--- a/recovery/root/init.recovery.logd.rc
+++ b/recovery/root/init.recovery.logd.rc
@@ -1,4 +1,4 @@
-service logd /sbin/logd
+service logd /system/bin/logd
     class core
     socket logd stream 0666 logd logd
     socket logdr seqpacket 0666 logd logd
